--- a/css/styles.css
+++ b/css/styles.css
@@ -133,18 +133,12 @@ a:visited {
   height: 400px;
 }
 
-#joe-burgess-card {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess.jpeg");
+#wendy-calderon-card {
+ background-image: url("https://i.imgur.com/XJowJVA.jpg");
 }
 
-#joe-burgess-cover {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
-}
-
-#avi-flombaum-card {
-}
-
-#mat-balez-card {
+#wendy-calderon-cover {
+ background-image: url("https://i.imgur.com/JCs5v7p.jpg");
 }
 
 #mathieu-balez-cover {
@@ -464,3 +458,5 @@ a:visited {
 .clearfix:after {
     clear: both;
 }
+/* bkgnd: https://i.imgur.com/JCs5v7p.jpg
+profile https://i.imgur.com/XJowJVA.jpg */
